Fixe bug resident button invisible

--- a/assets/scss/core/_scaffold.scss
+++ b/assets/scss/core/_scaffold.scss
@@ -176,6 +176,7 @@ strong {
 
 .resident_button {
 	background-color: $color-3;
+	color: black;
 	position: fixed;
 	width: auto;
 	right: 55px;
