--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ strong {
 
 .resident_button {
   background-color: #ffed00;
+  color: black;
   position: fixed;
   width: auto;
   right: 55px;
@@ -3216,23 +3217,23 @@ form select {
         animation-iteration-count: infinite;
         animation-duration: 1s; }
         #visite .plan-container .stage .pointer:nth-child(1) {
-          left: 201px;
-          top: 221px; }
+          left: 373px;
+          top: 236px; }
         #visite .plan-container .stage .pointer:nth-child(2) {
-          left: 278px;
-          top: 140px; }
+          left: 224px;
+          top: 242px; }
         #visite .plan-container .stage .pointer:nth-child(3) {
-          left: 152px;
-          top: 222px; }
+          left: 223px;
+          top: 227px; }
         #visite .plan-container .stage .pointer:nth-child(4) {
-          left: 326px;
-          top: 48px; }
+          left: 199px;
+          top: 69px; }
         #visite .plan-container .stage .pointer:nth-child(5) {
-          left: 327px;
-          top: 188px; }
+          left: 306px;
+          top: 103px; }
         #visite .plan-container .stage .pointer:nth-child(6) {
-          left: 203px;
-          top: 93px; }
+          left: 131px;
+          top: 186px; }
     #visite .plan-container .stage.active-hover:nth-child(1) {
       -webkit-transform: translateZ(0px) scale(1.1) rotateX(10deg);
       -moz-transform: translateZ(0px) scale(1.1) rotateX(10deg);
